@@ -1,6 +1,6 @@
 .libs
 INSTALL
-Makefile
+/Makefile
 Makefile.in
 aclocal.m4
 ar-lib
