@@ -1,22 +1,1 @@
-Doxyfile
-Makefile
-annotated.html
-classes.html
-dir_*.html
-doxygen.*
-dynsections.js
-files.html
-functions*.html
-globals*.html
-graph_legend.html
-index.html
-installdox
-jquery.js
-mspack*.html
-mspack_docs.zip
-search
-struct*.html
-tab*
-*.map
-*.md5
-*.png
+html
