@@ -1,22 +1,0 @@
-PROJECT_NAME           = libmspack
-OUTPUT_DIRECTORY       = .
-EXTRACT_ALL            = YES
-EXTRACT_LOCAL_CLASSES  = YES
-HIDE_UNDOC_MEMBERS     = YES
-SHOW_INCLUDE_FILES     = YES
-JAVADOC_AUTOBRIEF      = YES
-OPTIMIZE_OUTPUT_FOR_C  = YES
-SHOW_USED_FILES        = YES
-INPUT                  = @top_srcdir@/mspack/mspack.h
-FULL_PATH_NAMES        = NO
-GENERATE_HTML          = YES
-HTML_OUTPUT            = .
-HTML_FILE_EXTENSION    = .html
-HTML_TIMESTAMP         = NO
-GENERATE_HTMLHELP      = NO
-GENERATE_LATEX         = NO
-GENERATE_RTF           = NO
-GENERATE_MAN           = NO
-GENERATE_XML           = NO
-GENERATE_AUTOGEN_DEF   = NO
-CLASS_DIAGRAMS         = NO
