@@ -1,5 +1,11 @@
 2018-11-03  Stuart Caie <kyzer@cabextract.org.uk>
 
+	* configure.ac, doc/Makefile.in, doc/Doxyfile.in: remove these
+	template files and replace with static files. You can still build
+	the documentation with make -C doc
+
+2018-11-03  Stuart Caie <kyzer@cabextract.org.uk>
+
 	* Makefile.am, src: move the "useful" programs in src/ to examples/
 	and don't auto-install them. Even though they're useful, they are
 	intended as examples and aren't productised (no commmand-line
